[gd_scene load_steps=7 format=3 uid="uid://dx16ogatm4lny"]

[ext_resource type="Script" uid="uid://b1fvh3csmw1rp" path="res://AudioManager/audio_manager.gd" id="1_sulfk"]
[ext_resource type="Script" uid="uid://bspi6arxg5tdy" path="res://AudioManager/AudioBanks/audio_bank.gd" id="2_4jfua"]
[ext_resource type="Script" uid="uid://cx5jchkv647n0" path="res://AudioManager/analyzer.gd" id="2_k8shx"]
[ext_resource type="Script" uid="uid://dr033ydhgwxfe" path="res://AudioManager/sfx_hooks.gd" id="3_cic6f"]
[ext_resource type="Resource" uid="uid://bv5cd44g6qoku" path="res://AudioManager/AudioBanks/intro_bank.tres" id="3_jcm40"]
[ext_resource type="Script" uid="uid://do7w1bi0m0m77" path="res://AudioManager/audio_banks.gd" id="4_jcm40"]

[node name="AudioManager" type="Node"]
script = ExtResource("1_sulfk")

[node name="AudioBanks" type="Node" parent="."]
script = ExtResource("4_jcm40")
audio_banks = Dictionary[String, ExtResource("2_4jfua")]({
"INTRO": ExtResource("3_jcm40")
})

[node name="Analyzer" type="Node" parent="."]
script = ExtResource("2_k8shx")
is_operating = false

[node name="SfxHooks" type="Node" parent="."]
script = ExtResource("3_cic6f")
